--- a/oving1/toplevel_summary.html
+++ b/oving1/toplevel_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>toplevel Project Status (10/03/2012 - 19:41:14)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>toplevel Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>oving1.xise</TD>
@@ -13,42 +13,40 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>toplevel</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Mapped</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-2csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/*.xmsgs?&DataKey=Warning'>106 Warnings (8 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.unroutes'>All Signals Completely Routed</A></TD>
+&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
-<TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_envsettings.html'>
+<A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>&nbsp;&nbsp;</TD>
 </TR>
 </TABLE>
 
@@ -197,7 +195,7 @@ System Settings</A>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>138</TD>
 <TD ALIGN=RIGHT>232</TD>
 <TD ALIGN=RIGHT>59%</TD>
@@ -351,27 +349,7 @@ System Settings</A>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
-<TD>0 (Setup: 0, Hold: 0)</TD>
-<TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.unroutes'>All Signals Completely Routed</A></TD>
-<TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
-</TR>
-<TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
-<TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
-<TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TABLE>
+
 
 
 
@@ -379,22 +357,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>on 3. okt 19:32:57 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Warning'>98 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Info'>45 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Current</TD><TD>on 3. okt 19:37:45 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>on 3. okt 19:39:57 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/map.xmsgs?&DataKey=Warning'>4 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (1 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Current</TD><TD>on 3. okt 19:40:36 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/par.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:06 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='Z:/github/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Warning'>98 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='Z:/github/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Info'>45 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>on 3. okt 23:06:07 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>on 3. okt 19:40:49 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>on 3. okt 19:41:07 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>4 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>on 3. okt 23:06:06 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 19:32:22 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 19:41:08 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 19:41:14 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:06 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/03/2012 - 19:41:14</center>
+<br><center><b>Date Generated:</b> 10/13/2012 - 16:45:38</center>
 </BODY></HTML>
