--- a/oving1/toplevel_summary.html
+++ b/oving1/toplevel_summary.html
@@ -368,11 +368,11 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:06 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:06 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/github/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>on 3. okt 23:06:07 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/13/2012 - 16:45:38</center>
+<br><center><b>Date Generated:</b> 10/13/2012 - 17:45:47</center>
 </BODY></HTML>
