--- a/oving1/toplevel_summary.html
+++ b/oving1/toplevel_summary.html
@@ -20,7 +20,8 @@
 <TD>xc6slx16-2csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
-No Errors</TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\_xmsgs/*.xmsgs?&DataKey=Error'>7 Errors (7 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 12.4</TD>
@@ -43,7 +44,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_envsettings.html'>
+<A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -94,22 +95,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lø 13. okt 21:41:04 2012</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 15:29:39 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 15:29:39 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 15:29:39 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lø 13. okt 20:27:29 2012</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\_xmsgs/xst.xmsgs?&DataKey=Error'>7 Errors (7 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 15:29:39 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 15:29:39 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\toplevel.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>lø 13. okt 19:55:24 2012</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 15:29:39 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 15:29:39 2012</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/chribru/Desktop/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 15:29:39 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\netgen/synthesis/toplevel_synthesis.nlf'>Post-Synthesis Simulation Model Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:24 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:25 2012</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='Z:/git/GitHub/tdt4255/oving1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>lø 13. okt 19:55:25 2012</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/13/2012 - 22:24:46</center>
+<br><center><b>Date Generated:</b> 10/16/2012 - 14:39:33</center>
 </BODY></HTML>
